fixed header on mobile

--- a/main.less
+++ b/main.less
@@ -275,3 +275,6 @@ a {
 .secgen-letter p {
   font-family: @italics-font;
 }
+body {
+  overflow-x: hidden;
+}
